--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.52.3"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "fuse.js": "^6.6.2"
   }
 }
